--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,91 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+/*詳細ページ*/
+
+.user_show_bigbox{
+	width: 80%;
+	background-color: lightgray;
+	margin:0 auto;
+}
+
+
+.user_show_image{
+	width: 30%;
+	height: 300px;
+	background-color: gray;
+	float: left;
+}
+
+.user_show_image img{
+	width: 100%;
+	height: 300px;
+	border-radius: 50%;
+}
+.user_show_profile{
+	width: 70%;
+	height: 300px;
+	background-color: lightblue;
+	float: left;
+
+}
+.handle_name{
+	text-align: left;
+
+}
+.user_show_dm{
+	width: 30%;
+	height: 200px;
+	background-color: lightyellow;
+	float: left;
+}
+.user_show_space{
+	width: 70%;
+	height: 200px;
+	float: left;
+}
+.user_show_introduction{
+	width: 100%;
+	height: 300px;
+	background-color: lightgreen;
+	float: left;
+}
+/*編集ページ*/
+
+.user_edit_bigbox{
+	width: 80%;
+	background-color: lightgray;
+	margin:0 auto;
+}
+
+
+.user_edit_image{
+	width: 30%;
+	height: 300px;
+	background-color: gray;
+	float: left;
+}
+.user_edit_profile{
+	width: 70%;
+	height: 300px;
+	background-color: lightblue;
+	float: left;
+
+}
+.user_edit_dm{
+	width: 30%;
+	height: 200px;
+	background-color: lightyellow;
+	float: left;
+}
+.user_edit_space{
+	width: 70%;
+	height: 200px;
+	float: left;
+}
+.user_edit_introduction{
+	width: 100%;
+	height: 300px;
+	background-color: lightgreen;
+	float: left;
+}
