--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,6 @@
 
 
  <div class="event_show_big_box">
-	<div class="event_show_article" >
 	    <div class="event_show_event_image">
 	    	<%= attachment_image_tag @event, :image, :size => '300x300' %>
 		</div>
@@ -30,7 +29,6 @@
 		<div class="event_show_destroy">
 	  		<%= link_to "削除", event_path(@event.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
 		</div>
-	</div>
 </div>
 
 
@@ -41,15 +39,22 @@
 	<%= @event.event_comments.count %>件のコメント</h2>
 </div>
 <div class="event_show_comment">
-    	<% @event.event_comments.each do |event_comment| %>
-    		<%= event_comment.user_id %>
-    		<%= event_comment.comment %><br>
-    <% end %>
+	<% @event.event_comments.each do |event_comment| %>
+		<table class="table table-striped">
+			<tr>
+				<td><%= attachment_image_tag event_comment.user, :image, :size => '50x50' %><td>
+				<td><%= event_comment.user.name %><td>
+   				<td><%= event_comment.comment %><td>
+   				<td><%= event_comment.star %>点<td>
+   			</tr>
+   		</table>
+	<% end %>
 </div>
 
 <div class="event_show_chat">
 　　<%= form_for [@event, @event_comment] do |f| %>
-        <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+        <%= f.text_area :comment, rows:'3', class: "form-control",placeholder: "コメントをここに" %>
+        <%= f.number_field :star ,placeholder: "評価（５点満点）" %>
     	<%= f.submit "送信する" %>
 	<% end %>
 </div>
