--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,33 @@
-
-
-<script type="text/javascript">
-   var imglist = new Array(
-      "kari.jpg",
-      "logo.png"
-      );
-   var selectnum = Math.floor(Math.random() * imglist.length);
-   var output = "<img src=/assets/" + imglist[selectnum] + ">";
-
-   document. write(output);
-</script>
-
+<div class="user_show_bigbox">
+	<div class="user_show_image">
+		<%= attachment_image_tag @user, :image,:size => '200x200' ,format: 'jpeg' ,fallback: 'no_image.jpg' %>
+	</div>
+	<div class="user_show_profile">
+					<table class="table table-striped">
+				<tr>
+					<td>ハンドルネーム</td>
+					<td><%= @user.handle_name %></td>
+				</tr>
+				<tr>
+					<td>都道府県</td>
+					<td><%= @user.prefecture %></td>
+				</tr>
+				<tr>
+					<td>性別</td>
+					<td><%= @user.gender%></td>
+				</tr>
+				<tr>
+					<td>生年月日</td>
+					<td><%= @user.birthday %><td>
+				</td>
+			</table>
+	</div>
+	<div class="user_show_dm">
+		DM予定地
+	</div>
+	<div class="user_show_space">
+	</div>
+	<div class="user_show_introduction">
+		<%= @user.introduction %>
+	</div>
+</div>
