--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,18 +32,17 @@ header {
   	display: inline-block;
 }
 
-.mains_index_header_logo{
-	width: 1000px;
-	height: 70px;
-	max-width: 100%;
-	max-height: 100%;
-	margin-top: 10px;
-	background-color: black;
+.header_logo {
+  width: 267px;
+  height: 100px;
 
 }
-.mains_index_header_itembox {
-	height: 30px;
-	background-color: red;
+.header_logo img{
+  width: 267px;
+  height: 100px;
+}
+.mains_index_header.clearfix{
+  background-color: black;
 }
 
 .mains_index_header_item {
@@ -54,6 +53,7 @@ header {
 	line-height: 100px;
 	background-color: lightgray;
 	text-align: center;
+  background-color: black;
 }
 
 
