--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -12,25 +12,26 @@
 
 <h1>最近追加されたイベント</h1>
 	<div class="main_event_big_recent">
-		<div class="main_index_recent">
-			<% @events.each do |event| %>
-			<%= attachment_image_tag event, :image, :size => "200x200" %>
-			 <%=link_to event.event_name, event_path(event.id) %>
+		<% @events.each do |event| %>
+			<div class="main_index_recent">
+				<div><%= attachment_image_tag event, :image, :size => "200x200" %></div>
+				<div class="event_name"><%=link_to event.event_name, event_path(event.id) %></div>
+			</div>
 		<% end %>
-		</div>
+
 	</div>
-</div>
+
 
 
 
 
 <h1>最近の追加されたアーティスト</h1>
 <div class="main_event_big_recent">
-	<div class="main_index_recent">
-		<% @artists.each do |artist| %>
-			<%= attachment_image_tag artist, :image, :size => "200x200" %>
-			<%=link_to artist.artist_name, artist_path(artist.id) %>
+	<% @artists.each do |artist| %>
+		<div class="main_index_recent">
+			<div><%= attachment_image_tag artist, :image, :size => "200x200" %></div>
+			<div class="artist_name"><%=link_to artist.artist_name, artist_path(artist.id) %></div>
+		</div>
 		<% end %>
-	</div>
 </div>
 
