--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -46,6 +46,7 @@
 				<td><%= event_comment.user.name %><td>
    				<td><%= event_comment.comment %><td>
    				<td><%= event_comment.star %>点<td>
+   				<td><%= render partial: "event_favorite" %></td>
    			</tr>
    		</table>
 	<% end %>
@@ -59,19 +60,4 @@
 	<% end %>
 </div>
 
-
-<% if @event_comment.event_favorited_by?(current_user) %>
-  <li>
-    	<%= link_to event_event_favorites_path(@event), method: :delete do %>
-      	<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-      	<%= @event.event_favorites.count %> いいね
-    	<% end %>
-  </li>
-<% else %>
-  <li>
-  	<%= link_to event_event_favorites_path(@event), method: :post do %>
-  	<i class="fa fa-heart-o" aria-hidden="true"></i>
-  	<%= @event_comment.event_favorites.count %> いいね
-  	<% end %>
-  </li>
-<% end %>
+<!-- https://qiita.com/YuitoSato/items/94913d6a349a530b2ea2 -->
