--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -35,21 +35,35 @@
 }
 .user_show_dm{
 	width: 30%;
-	height: 200px;
+	height: 30px;
 	background-color: lightyellow;
 	float: left;
 }
+
+.user_show_dm_button{
+	font-weight: bold;
+	width: 100%;
+	padding-bottom: 0px;
+	height: 30px;
+
+}
 .user_show_space{
 	width: 70%;
-	height: 200px;
+	height: 30px;
 	float: left;
 }
 .user_show_introduction{
 	width: 100%;
-	height: 300px;
+	height: 100px;
 	background-color: lightgreen;
 	float: left;
 }
+.user_show_introduction_p{
+	font-weight: bold;
+	
+}
+
+
 /*編集ページ*/
 
 .user_edit_bigbox{
