--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -35,3 +35,12 @@
 		<% end %>
 </div>
 
+<h1>評価の高かったイベント</h1>
+	<div class="main_event_big_recent">
+
+
+
+		https://qiita.com/nojinoji/items/2b3f8309a31cc6d88d03
+
+
+		https://qiita.com/YuitoSato/items/94913d6a349a530b2ea2
