--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,3 +1,17 @@
-// Place all the styles related to the rooms controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.dm_box{
+	width: 60%;
+	background-color: lightgray;
+	margin: 0 auto;
+}
+
+.entries{
+	padding-left: 50px;
+}
+.messages{
+	padding-left: 50px;
+	font-size: 24px;
+	word-wrap: break-word;
+}
+.dm_form{
+	padding-left: 50px;
+}
