--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Rooms#show</h1>
-<p>Find me in app/views/rooms/show.html.erb</p>
+<div class="dm_box">
+    <h1>DM</h1>
+    <div class="entries">
+       <h4>参加者</h4>
+       <% @entries.each do |e| %>
+       <h5><strong><a href="/users/<%= e.user.id %>"><%= e.user.name%>さん</a></strong></h5>
+       <% end %>
+    </div>
+    <div class="messages">
+      <hr>
+        <% if @messages.present? %>
+          <% @messages.each do |m| %>
+          <%= attachment_image_tag m.user, :image, :size => "50x50" %>
+          <strong><%= m.content %></strong>
+          <small>by <strong><a href="/users/<%= m.user_id %>"><%= m.user.name %>さん</a></strong></small>
+     <hr>
+          <% end %>
+        <% else %>
+          <h3 class="text-center">メッセージはまだありません</h3>
+        <% end %>
+    </div>
+    <div class="dm_form">
+      <%= form_for @message do |f| %>
+        <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size => 70 %>
+        <%= f.hidden_field :room_id, :value => @room.id %>
+        <br>
+        <%= f.submit "投稿する" %>
+      <% end %>
+      <%= link_to "ユーザー一覧に戻る", users_path %>
+    </div>
+</div>
