--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,10 @@
-<div class="user_show_bigbox">
-	<div class="user_show_image">
-		<%= attachment_image_tag @user, :image,:size => '200x200' ,format: 'jpeg' ,fallback: 'no_image.jpg' %>
-	</div>
-	<div class="user_show_profile">
-					<table class="table table-striped">
+
+	<div class="user_show_bigbox">
+		<div class="user_show_image">
+			<%= attachment_image_tag @user, :image,:size => '200x200' ,format: 'jpeg' %>
+		</div>
+		<div class="user_show_profile">
+			<table class="table table-striped">
 				<tr>
 					<td>ハンドルネーム</td>
 					<td><%= @user.handle_name %></td>
@@ -19,15 +20,26 @@
 				<tr>
 					<td>生年月日</td>
 					<td><%= @user.birthday %><td>
-				</td>
+				</tr>
 			</table>
+		</div>
+		<div class="user_show_dm">
+			<% if @isRoom == true %>
+	    		<button class="user_show_dm_button"><a href="/rooms/<%= @roomId %>">DM</a></button>
+	  		<% else %>
+	  			<% if @room != nil %>
+		   	       	<%= form_for @room do |f| %>
+		      			<%= fields_for @entry do |e| %>
+		        			<%= e.hidden_field :user_id, :value=> @user.id %>
+		     	    	<% end %>
+		            	<%= f.submit "DMを始める" %>
+		    		<% end %>
+		    	<% end %>
+	  		<% end %>
+		</div>
+		<div class="user_show_space">
+		</div>
+		<div class="user_show_introduction">
+			<div class="user_show_introduction_p"><%= @user.introduction %></div>
+		</div>
 	</div>
-	<div class="user_show_dm">
-		DM予定地
-	</div>
-	<div class="user_show_space">
-	</div>
-	<div class="user_show_introduction">
-		<%= @user.introduction %>
-	</div>
-</div>
