--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,7 +7,8 @@
             <%= f.text_field :event_name %>
             <h4>開催地</h4>
             <%= f.text_field :place %>
-            <h4>出演者</h4>
+            <h4>出演</h4>
+            <%= f.text_field :performer %>
             <h4>詳細</h4>
             <%= f.text_area :introduction %>
             <h4>日付</h4>
