--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,16 +24,15 @@
 						<tr>
 							<td>生年月日</td>
 							<td><%= f.date_field :birthday %><td>
-						</td>
+						</tr>
+						<tr>
+							<td>趣味</td>
+							<td><%= f.text_field :hobby %><td>
+						</tr>
 					</table>
 				</div>
 			</div>
 
-		</div>
-		<div class="user_edit_dm">
-			<h2>メッセージを送る予定地</h2>
-		</div>
-		<div class="user_edit_space">
 		</div>
 		<div class="user_edit_introduction">
 			<h4>自己紹介</h4>
