--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -29,7 +29,7 @@
 }
 
 .artist_index_article{
-  width: 800px;
+  width: 100%;
   margin :0 auto;
   margin-top: 10px;
 }
@@ -79,5 +79,24 @@ float: left;
   text-align: center;
   font-weight: bold;
   margin:0 auto;
+
+}
+
+
+
+.artist_edit_big_box{
+  width: 80%;
+  height: 300px;
+  margin:0 auto;
+
+}
+.artist_edit_artist_image
+{
+  float: left;
+}
+
+.artist_edit_table{
+  float: left;
+  border:solid;
 
 }
