--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -27,7 +27,7 @@
 
 .event_index_article{
   width: 100%;
-  height: 220px;
+  height: 350px;
   margin :0 auto;
   padding-top: 10px;
 }
@@ -62,6 +62,10 @@ float: left;
   font-size: left;
 }
 
+.table {
+
+  
+}
 
 /*詳細ーーー*/
 
