--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,8 +13,10 @@
 .user_show_image{
 	width: 30%;
 	height: 300px;
-	background-color: gray;
 	float: left;
+	border:solid;
+	border-color: lightgray;
+	border-radius: 50%;
 }
 
 .user_show_image img{
@@ -25,7 +27,6 @@
 .user_show_profile{
 	width: 70%;
 	height: 300px;
-	background-color: lightblue;
 	float: left;
 
 }
@@ -36,7 +37,6 @@
 .user_show_dm{
 	width: 30%;
 	height: 30px;
-	background-color: lightyellow;
 	float: left;
 }
 
@@ -55,8 +55,9 @@
 .user_show_introduction{
 	width: 100%;
 	height: 100px;
-	background-color: lightgreen;
 	float: left;
+	border: groove #00FFFF;
+
 }
 .user_show_introduction_p{
 	font-weight: bold;
@@ -68,7 +69,6 @@
 
 .user_edit_bigbox{
 	width: 80%;
-	background-color: lightgray;
 	margin:0 auto;
 }
 
@@ -76,20 +76,17 @@
 .user_edit_image{
 	width: 30%;
 	height: 300px;
-	background-color: gray;
 	float: left;
 }
 .user_edit_profile{
 	width: 70%;
 	height: 300px;
-	background-color: lightblue;
 	float: left;
 
 }
 .user_edit_dm{
 	width: 30%;
 	height: 200px;
-	background-color: lightyellow;
 	float: left;
 }
 .user_edit_space{
@@ -100,6 +97,6 @@
 .user_edit_introduction{
 	width: 100%;
 	height: 300px;
-	background-color: lightgreen;
 	float: left;
+	border:dashed;
 }
