--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -3,10 +3,12 @@
 <div class="artist_new">
 	<h1>アーティスト新規投稿</h1>
 		<%= form_for(@artist) do |f| %>
-   			<h4>タイトル</h4>
-    		<%= f.text_field :artist_name %>
-		    <h4>本文</h4>
+   			<h4>アーティスト名</h4>
+    		<%= f.text_area :artist_name %>
+		    <h4>詳細</h4>
     		<%= f.text_area :introduction %>
+            <h4>公式サイト</h4>
+            <%= f.text_area :url %>
     		<h4>画像</h4>
     		<%= f.attachment_field :image %>
     		<%= f.submit '投稿' %>
