--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -14,6 +14,10 @@
 						    		<td>詳細</td>
 	  						  		<td><%= @artist.introduction %></td>
 								</tr>
+								<tr>
+									<td>サイト</td>
+									<td><%= link_to "公式ホームページへ",@artist.url %></td>
+								</tr>
 							</table>
 					</div>
 				</div>
@@ -40,7 +44,8 @@
 	</div>
 　　<%= form_for [@artist, @artist_comment] do |f| %>
        <%= f.text_area :content, rows:'3', class: "form-control",placeholder: "コメントをここに" %>
-    <%= f.submit "送信する" %>
+       <%= f.number_field :star ,placeholder: "評価（５点満点）" %>
+    	<%= f.submit "送信する" %>
 <% end %>
 
 
