--- a/app/views/events/_event_favorite.html.erb
+++ b/app/views/events/_event_favorite.html.erb
@@ -3,18 +3,17 @@
     <%= button_to event_event_favorite_path(event_favorite, event_comment_id: event_comment.id), method: :delete, id: "like-button", remote: true do %>
       <%= image_tag("heart.png") %>
       <span>
-        <%= event_comment.event_favorite_count %>
+        <%= event_comment.event_favorite_count %>個
       </span>
-    <% end %>
+  <% end %>
   <% else %>
     <%= button_to event_event_favorites_path(@event), id: "like-button", remote: true do %>
       <%= image_tag("black_heart.png",:size =>'10x10') %><%= @event_comment.event_favorites_count %>
-
     <% end %>
   <% end %>
-<% else %>
-  <%= image_tag("black_heart") %>
-    <span>
-              <%= @event_comment.event_favorite_count %>
-    </span>
+    <% else %>
+      <%= image_tag("black_heart.png") %>
+         <span>
+      <%= @event_comment.event_favorite_count %>個
+    </span> <!-- ログインしてないといいねできない -->
 <% end %>
