--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,10 @@
 					<td>生年月日</td>
 					<td><%= @user.birthday %><td>
 				</tr>
+				<tr>
+					<td>趣味</td>
+					<td><%= @user.hobby %></td>
+				</tr>
 			</table>
 		</div>
 		<div class="user_show_dm">
@@ -40,6 +44,8 @@
 		<div class="user_show_space">
 		</div>
 		<div class="user_show_introduction">
-			<div class="user_show_introduction_p"><%= @user.introduction %></div>
+			<div class="user_show_introduction_p">自己紹介<br>
+				<%= @user.introduction %>
+			</div>
 		</div>
 	</div>
