--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,6 +1,6 @@
 .dm_box{
 	width: 60%;
-	background-color: lightgray;
+	background-color: lightblue;
 	margin: 0 auto;
 }
 
@@ -14,4 +14,8 @@
 }
 .dm_form{
 	padding-left: 50px;
+}
+
+.dm{
+	text-align: center;
 }
