--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,7 +5,7 @@
 
 .user_show_bigbox{
 	width: 80%;
-	background-color: lightgray;
+	height: 450px;
 	margin:0 auto;
 }
 
@@ -61,7 +61,6 @@
 }
 .user_show_introduction_p{
 	font-weight: bold;
-	
 }
 
 
