--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,3 +1,8 @@
+<% @artist.errors.full_messages.each do |message| %>
+  <%= message %>
+<% end %>
+
+
 <div class="artist_new_space">
 </div>
 <div class="artist_new">
