--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,7 @@
+<% @event.errors.full_messages.each do |message| %>
+  <%= message %>
+<% end %>
+
 <div class="event_new_space">
 </div>
 <div class="event_new">
