--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,49 +56,15 @@ header {
   background-color: black;
 }
 
-
-/* 検索ボックス */
-dl.searchbox{
-  width: 350px;
-  position:relative;
-  background-color:#fff;
-  border:1px solid #aaa;
-  border-radius:6px;
-  display: inline-block;
-}
-dl.searchbox dt{
-  padding:3px;
-}
-dl.searchbox dt input{
-  width:70%;
-  height:30px;
-  line-height:30px;
-  background:none;
-  border:none;
-}
-dl.searchbox dd{
-  position:absolute;
-  top:1px;
-  right:1px;
-  width:30%;
-}
-.search-btn{
-  display:block;
-  background:#5fad35;
-  width:100%;
-  height:36px;
-  line-height:36px;
-  border:none;
-  border-radius: 0 6px 6px 0;
-  color:#FFF;
-}
-
-.search-btn:hover {
-  background:#228B22;
-}
-
-
   body {
     background-image: url("haikei2.jpeg");
+    
+font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
   }
 
+footer{
+  width: 1440px;
+  height: 100px;
+  padding-left: 0px;
+  background-color: black;
+}
