--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -23,13 +23,13 @@
 
 .artist_index_big_box{
   width: 80%;
-  height: 300px;
   margin:0 auto;
 
 }
 
 .artist_index_article{
   width: 100%;
+  height: 300px;
   margin :0 auto;
   margin-top: 10px;
 }
@@ -43,8 +43,7 @@
 .artist_index_artist_name{
   width: 600px;
   height: 100px;
-
-float: left;
+  float: left;
 
 
 }
@@ -52,25 +51,38 @@ float: left;
 .artist_index_artist_introduction{
   width: 600px;
   height: 100px;
-
   float: left;
 }
 
 
 /*アーティスト詳細*/
 
-
 .artist_show_big_box{
   width: 80%;
-  height: 300px;
   margin:0 auto;
+  padding-top: 20px;
+}
+.artist_show_row{
+  padding-top: 30px;
+}
+.artist_show_box{
+  width: 100%;
+  height: 300px;
 }
 .artist_show_artist_image{
+  padding-top: 30px;
   float: left;
 }
 
 .col-lg-8{
   padding-top: 10px;
+}
+
+.col-xs-6{
+  word-break: break-all;
+}
+.table_image{
+  width: 600px;
 }
 
 .artist_show_comment_count{
