--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,7 +9,7 @@
 	   				<div class="col-lg-8">
 			    		<table class="table table-striped">
 			    			<tr>
-			    				<td><p>イベントタイトル</p></td>
+			    				<td class="col-xs-2"><p>タイトル</p></td>
 			    				<td><span><%=link_to event.event_name, event_path(event.id) %></span></td>
 			    			</tr>
 			    			<tr>
@@ -33,3 +33,5 @@
 		   	</div>
 		<% end %>
 	</div>
+
+<%= paginate @events, class: "paginate" %>
