--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,5 +1,5 @@
 <div class="dm_box">
-    <h1>DM</h1>
+    <h1 class="dm">DM</h1>
     <div class="entries">
        <h4>参加者</h4>
        <% @entries.each do |e| %>
@@ -12,7 +12,7 @@
           <% @messages.each do |m| %>
           <%= attachment_image_tag m.user, :image, :size => "50x50" %>
           <strong><%= m.content %></strong>
-          <small>by <strong><a href="/users/<%= m.user_id %>"><%= m.user.name %>さん</a></strong></small>
+          <small>by <strong><a href="/users/<%= m.user_id %>"><%= m.user.name %></a></strong></small>
      <hr>
           <% end %>
         <% else %>
