--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,30 +6,30 @@
 		<div class="user_show_profile">
 			<table class="table table-striped">
 				<tr>
-					<td>ハンドルネーム</td>
-					<td><%= @user.handle_name %></td>
+					<td class="col-xs-2">ハンドルネーム</td>
+					<td class="col-xs-2"><%= @user.handle_name %></td>
 				</tr>
 				<tr>
-					<td>都道府県</td>
+					<td class="col-xs-2">都道府県</td>
 					<td><%= @user.prefecture %></td>
 				</tr>
 				<tr>
-					<td>性別</td>
+					<td class="col-xs-2">性別</td>
 					<td><%= @user.gender%></td>
 				</tr>
 				<tr>
-					<td>生年月日</td>
+					<td class="col-xs-2">生年月日</td>
 					<td><%= @user.birthday %><td>
 				</tr>
 				<tr>
-					<td>趣味</td>
+					<td class="col-xs-2">趣味</td>
 					<td><%= @user.hobby %></td>
 				</tr>
 			</table>
 		</div>
 		<div class="user_show_dm">
 			<% if @isRoom == true %>
-	    		<button class="user_show_dm_button"><a href="/rooms/<%= @roomId %>">DM</a></button>
+	    		<button class="user_show_dm_button"><a href="/rooms/<%= @roomId %>">DMを送る</a></button>
 	  		<% else %>
 	  			<% if @room != nil %>
 		   	       	<%= form_for @room do |f| %>
@@ -49,3 +49,4 @@
 			</div>
 		</div>
 	</div>
+
