--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,9 +1,11 @@
+
+
 <h1 class="aa">アーティスト一覧</h1>
 	<div class="artist_index_big_box">
-		<% @artists.each do |artist| %>
+		<% @search_artists.each do |artist| %>
 	    	<div class="artist_index_article" >
 		    	<div class="artist_index_artist_image">
-	 		   		<%= attachment_image_tag artist, :image, :size => '200x200' %>
+	 		   		<%= attachment_image_tag artist, :image, :size => '200x200' ,fallback: 'noimage.png'%>
 				</div>
 			   	<div class="row">
    			   		<div class="col-lg-8">
