--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,17 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user_index{
+	width: 40%;
+	margin:0 auto;
+}
+#hello{
+	color: black;
+}
+
+
+
 /*詳細ページ*/
 
 .user_show_bigbox{
@@ -9,6 +20,19 @@
 	margin:0 auto;
 }
 
+body {
+    position: relative;
+    left: 0;
+    overflow-x: hidden;
+}
+#slide_menu{
+    position: fixed;
+    top: 0;
+    left: -240px;
+    width: 240px;
+    height: 100%;
+    background: #E87272;
+}
 
 .user_show_image{
 	width: 30%;
@@ -61,6 +85,7 @@
 }
 .user_show_introduction_p{
 	font-weight: bold;
+	word-break: break-all;
 }
 
 
@@ -95,7 +120,8 @@
 }
 .user_edit_introduction{
 	width: 100%;
-	height: 300px;
+	height: 100px;
 	float: left;
-	border:dashed;
+	border: groove #00FFFF;
+
 }
