--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -15,7 +15,11 @@
             <h4>公式サイト</h4>
             <%= f.text_area :url %>
     		<h4>画像</h4>
+        <div class="image">
+            <div class="new_image">
     		<%= f.attachment_field :image %>
+        </div>
+        </div>
     		<%= f.submit '投稿' %>
 		<% end %>
 </div>
