--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,51 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
- <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputName", placeholder:"名前"%>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="registrations">
+  <div class="sign-in">
+    <h2>新規登録</h2>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+          <div class="field">
+            <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+          </div>
+          <div class="field">
+            <%= f.label :handle_name %>
+            <%= f.text_field :handle_name %>
+          </div>
+          <div class="field">
+            <%= f.label :prefecture %>
+            <%= f.text_field :prefecture %>
+          </div>
+          <div class="field">
+              <%= f.label :gender %>
+              <label><%= f.radio_button :gender, "男" %> 男 </label>
+              <label><%= f.radio_button :gender, "女" %> 女</label>
+          </div>
+          <div class="field">
+              <%= f.label :birthday %><br>
+              <%= f.date_field :birthday %>
+          </div>
+          <div class="field">
+              <%= f.label :hobby %><br>
+              <%= f.text_field :hobby %>
+          <div class="field">
+              <%= f.label :email %><br>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          </div>
+          <div class="field">
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "new-password" %>
+          </div>
+          <div class="field">
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+          <div class="actions">
+              <%= f.submit "Sign up" %>
+          </div>
+        <% end %>
+        <%= render "devise/shared/links" %>
+      </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
