--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="event_show_big_box">
 	<div class="event_show_event_image">
-    	<%= attachment_image_tag @event, :image, :size => '300x300' %>
+    	<%= attachment_image_tag @event, :image, :size => '300x300' ,fallback: 'noimage.png'%>
 	</div>
 		<div class="container">
    		   <div class="event_show_row">
@@ -34,17 +34,18 @@
 		<div class="event_show_destroy">
 			<%= link_to "編集", edit_event_path(@event.id) %>
 	  		<%= link_to "削除", event_path(@event.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-		</div>	
+		</div>
 	</div>
 
 		<div class="event_show_commment_count">
 			<%= @event.event_comments.count %>件のコメント</h2>
+			平均評価<%= @event.avg_star %>点
 		</div>
 			<div class="event_show_comment">
 				<table class="table table-striped">
 					<% @event.event_comments.each do |event_comment| %>
 						<tr>
-							<td class="col-xs-1"><%= attachment_image_tag event_comment.user, :image, :size => '50x50' %><td>
+							<td class="col-xs-1"><%= attachment_image_tag event_comment.user, :image, :size => '50x50', fallback:"no_image.png" %><td>
 							<td class="col-xs-1"><%= link_to event_comment.user.name,user_path(event_comment.user.id) %><td>
 	   						<td class="col-xs-6"><%= event_comment.comment %><td>
 	   						<td class="col-xs-1"><%= event_comment.star %>点<td>
