--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
        <title>EConnect</title>
           <%= csrf_meta_tags %>
           <%= csp_meta_tag %>
-          <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+          <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
           <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
     <header>
         <nav class="mains_index_header clearfix">
-          <a href="/mains"><img src='/assets/logo.png'alt=" " class="header_logo"></a>
+          <a href="/mains"><img src='/assets/e-con.gif'alt=" " class="header_logo"></a>
             <div class="mains_index_header_item">
               <%= link_to " イベント一覧", events_path,:style=>"color: white; text-decoration:none; font-size:14px" %>
             </div>
@@ -18,17 +18,58 @@
             </div>
           <% if user_signed_in? %>
             <div class="mains_index_header_item">
-              <%= link_to "ログアウト", destroy_user_session_path, :style=>"color: white; text-decoration:none; font-size:14px", method: :delete  %>
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :style=>"color: white; text-decoration:none; font-size:14px" %>
             </div>
             <div class="mains_index_header_item">
-               <%= link_to current_user.name, user_path(current_user.id),:style=>"color: white;" %>
-             </div>
+
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+          <script>
+          $(function(){
+          var menu = $('#slide_menu'), // スライドインするメニューを指定
+            menuBtn = $('#button'), // トリガーとなるボタンを指定
+            body = $(document.body),
+              menuWidth = menu.outerWidth();
+              menuBtn.on('click', function(){
+            body.toggleClass('open');
+                  if(body.hasClass('open')){
+                body.animate({'left' : menuWidth }, 300);
+                menu.animate({'left' : 0 }, 300);
+              } else {
+                menu.animate({'left' : -menuWidth }, 300);
+                body.animate({'left' : 0 }, 300);
+              }
+              });
+          });
+          </script>
+          
+              <!-- スライドメニュー部分-->
+              <nav id="slide_menu">
+                  <ol>
+                      <li><%= link_to "マイページ", user_path(current_user.id),:style=>"color: white; text-decoration:none; font-size:14px" %></li>
+                      <li><%= link_to "新規イベント", new_event_path,:style=>"color: white; text-decoration:none; font-size:14px" %></li>
+                      <li><%= link_to "新規アーティスト", new_artist_path,:style=>"color: white; text-decoration:none; font-size:14px" %></li>
+
+                  </ol>
+              </nav>
+
+              <!--メニューを出すボタン-->
+              <p id="button">メニュー<i class="fa fa-bars"></i></p>
+
+                       </div>
+                       <div class="mains_index_header_item">
+                       <dl class="searchbox">
+            <%= search_form_for @search, url: artists_path do |f| %>
+              <dt><%= f.text_field :artist_name_cont ,placeholder: '検索するテキストを入力...' %></dt>
+              <dd><%= f.submit ("検索") , class: 'search-btn'%></dd>
+            <% end %>
+          </dl>
+          </div>
           <% else %>
              <div class="mains_index_header_item">
-               <%= link_to "新規登録", new_user_registration_path,:style=>"color: #white; text-decoration:none; font-size:14px" %>
+               <%= link_to "新規登録", new_user_registration_path,:style=>"color: white; text-decoration:none; font-size:14px" %>
               </div>
               <div class="mains_index_header_item">
-                <%= link_to " ログイン", new_user_session_path,:style=>"color: #white; text-decoration:none; font-size:14px" %>
+                <%= link_to " ログイン", new_user_session_path,:style=>"color: white; text-decoration:none; font-size:14px" %>
               </div>
           <% end %>
         </nav>
@@ -36,5 +77,5 @@
     <body>
       <%= yield %>
     </body>
- 
+ <div id="footer"><p id=foot>E-Connect</p></div>
 </html>
