--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
-<h1>DMサンプルアプリ</h1>
+<div class="user_index">
+<h1>DM一覧</h1>
 <% if user_signed_in? %>
-<h2>Hello <%= current_user.name %></h2>
+<h2 id="hello">Hello <%= current_user.name %>さん</h2>
   <% @users.each do |u| %>
   <p><a href="/users/<%= u.id %>"><%= u.name %>さん</a></p>
   <hr>
@@ -11,3 +12,4 @@
   <br>
   <%= link_to "ログインする", new_user_session_path %>
 <% end %>
+</div>
