--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,32 @@
 
 	<div class="user_show_bigbox">
 		<div class="user_show_image">
-			<%= attachment_image_tag @user, :image,:size => '200x200' ,format: 'jpeg' %>
+			<%= attachment_image_tag @user, :image,:size => '200x200' ,format: 'jpeg',fallback:"no_image.png" %>
 		</div>
 		<div class="user_show_profile">
 			<table class="table table-striped">
 				<tr>
-					<td class="col-xs-2">ハンドルネーム</td>
-					<td class="col-xs-2"><%= @user.handle_name %></td>
+					<td class="col-xs-6">ハンドルネーム</td>
+					<td class="col-xs-6"><%= @user.handle_name %></td>
 				</tr>
 				<tr>
-					<td class="col-xs-2">都道府県</td>
+					<td class="col-xs-6">都道府県</td>
 					<td><%= @user.prefecture %></td>
 				</tr>
 				<tr>
-					<td class="col-xs-2">性別</td>
+					<td class="col-xs-6">性別</td>
 					<td><%= @user.gender%></td>
 				</tr>
 				<tr>
-					<td class="col-xs-2">生年月日</td>
+					<td class="col-xs-6">生年月日</td>
 					<td><%= @user.birthday %><td>
 				</tr>
 				<tr>
-					<td class="col-xs-2">趣味</td>
+					<td class="col-xs-6">趣味</td>
 					<td><%= @user.hobby %></td>
+				</tr>
+				<tr>
+					<td class="col-xs-6"><%= link_to "編集する", edit_user_path(@user.id) %></td>
 				</tr>
 			</table>
 		</div>
@@ -40,6 +43,7 @@
 		    		<% end %>
 		    	<% end %>
 	  		<% end %>
+	  		<%= link_to "DM一覧", users_path %>
 		</div>
 		<div class="user_show_space">
 		</div>
