--- a/app/views/artists/_artist_favorite.html.erb
+++ b/app/views/artists/_artist_favorite.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
   <% if artist_comment.artist_favorite_user(current_user.id) %>
     <%= button_to artist_comment_artist_favorite_path(artist_comment.id), method: :delete, remote: true do %>
-      <%= image_tag("heart.png") %>
+      <%= image_tag("heart.png",:size =>'10x10') %>
       <span>
-        <%= artist_comment.artist_favorite_count %>
+        <%= artist_comment.artist_favorites.count %>
       </span>
     <% end %>
   <% else %>
@@ -15,7 +15,7 @@
 <% else %>
   <%= image_tag("black_heart",:size =>'10x10') %>
     <span>
-              <%= @artist_comment.event_favorite_count %>
+              <%= artist_comment.artist_favorites_count %>
     </span>
 <% end %>
 
