--- a/app/views/events/_event_favorite.html.erb
+++ b/app/views/events/_event_favorite.html.erb
@@ -1,19 +1,21 @@
 <% if user_signed_in? %>
-  <% if event_comment.event_favorite_user?(current_user) %>
+  <% if event_comment.event_favorite_user?(current_user.id) %>
     <%= button_to event_comment_event_favorites_path(event_comment.id), method: :delete, remote: true do %>
       <%= image_tag("heart.png",:size =>'10x10') %>
       <span>
-        <%= event_comment.event_favorites.count %>個
+        <%= event_comment.event_favorites.count %>
       </span>
   <% end %>
   <% else %>
-    <%= button_to event_comment_event_favorites_path(event_comment.id),method: :post, remote: true do %>
+    <%= button_to 
+    event_comment_event_favorites_path(
+    event_comment.id),method: :post, remote: true do %>
       <%= image_tag("black_heart.png",:size =>'10x10') %><%= event_comment.event_favorites.count %>
     <% end %>
   <% end %>
     <% else %>
       <%= image_tag("black_heart.png",:size =>'10x10') %>
          <span>
-      <%= event_comment.event_favorites.count %>個
+      <%= event_comment.event_favorites.count %>
     </span> <!-- ログインしてないといいねできない -->
 <% end %>
