--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 	 	<% @events.each do |event| %>
 	 		<div class="event_index_article">
 	 			<div class="event_index_event_image">
-	 				<%= attachment_image_tag event, :image, :size => '200x220'%>
+	 				<%= attachment_image_tag event, :image, :size => '200x220',fallback: 'noimage.png'%>
 			    </div>
 			    <div class="row">
 	   				<div class="col-lg-8">
@@ -24,7 +24,7 @@
 							<tr>
 								<td>新着コメント</td>
 									<% event.event_comments.order(id: "DESC").limit(1).each do |event_comment| %>
-									<td><%= event_comment.comment %></td>
+									<td id="event_comment"><%= event_comment.comment %></td>
 									<% end %>
 							</tr>
 	   					</table>
@@ -33,5 +33,6 @@
 		   	</div>
 		<% end %>
 	</div>
-
+<div class="page">
 <%= paginate @events, class: "paginate" %>
+</div>
